[package]
name = "msfx"
version = "0.1.0"
edition = "2021"

authors = ["Miquel Sas"]
description = "Rust implementation of the MSFX libraries and applications."
license = "MIT OR Apache-2.0"

[dependencies]
strum = "0.26"
strum_macros = "0.26"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.21"

[lib]
name = "msfx"
path = "src/msfx/lib.rs"

[[bin]]
name = "test_types"
path = "src/test/test_types.rs"

[[bin]]
name = "test_json"
path = "src/test/test_json.rs"

[[bin]]
name = "test_chrono"
path = "src/test/test_chrono.rs"
